// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ColourInput /> > should have some hintText 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_position_relative_mobile__onxwju9w sprinkles_width_full_mobile__onxwjugg NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew"
      >
        <div
          class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju88 sprinkles_flexWrap_nowrap_mobile__onxwjuok sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_center_mobile__onxwjulg sprinkles_position_relative_mobile__onxwju9w"
        >
          <div
            class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_display_flex_mobile__onxwju88 sprinkles_height_full_mobile__onxwjuew sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_space-around_mobile__onxwjulo sprinkles_flexShrink_0_mobile__onxwjuoc sprinkles_position_absolute_mobile__onxwjua0 ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
          >
            <div
              class="reset_block__1oah0224 sprinkles_paddingBottom_3_mobile__onxwjuqw sprinkles_paddingLeft_3_mobile__onxwjus0 sprinkles_paddingRight_3_mobile__onxwjut4 sprinkles_paddingTop_3_mobile__onxwjuu8 sprinkles_borderRadius_1_mobile__onxwjuao"
              style="background-color: rgb(108, 17, 17);"
            />
          </div>
          <span
            class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju80 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwjua0"
          >
            #6c1111
          </span>
          <input
            autocomplete="off"
            class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_flexGrow_1_mobile__onxwjuo8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_width_full_mobile__onxwjugg sprinkles_position_relative_mobile__onxwju9w sprinkles_display_flex_mobile__onxwju88 sprinkles_borderRadius_md_mobile__onxwjub4 sprinkles_backgroundColor_transparent__onxwju4o withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
            id="id"
            type="color"
            value="#6c1111"
          />
        </div>
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_flex_mobile__onxwju88 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew sprinkles_textAlign_left_mobile__onxwjuac NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjurw sprinkles_paddingRight_2_mobile__onxwjut0 sprinkles_display_block_mobile__onxwju80 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju2s sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_marginBottom_none_mobile__onxwjuw4 sprinkles_marginLeft_none_mobile__onxwjux8 sprinkles_marginRight_none_mobile__onxwjuyg sprinkles_marginTop_none_mobile__onxwjuzo sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_inline_mobile__onxwju8g NotchedBase_placeholder_default__1ft8sxlz InputState_natural_default_colour__a2a1mv4 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl17"
            for="id"
          >
            placeholder
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
    <p
      class="reset_blockText__1oah022d useTextStyles_root__1xnpmd70 reset_blockText__1oah022d useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_2__1xnpmd72 reset_blockText__1oah022d sprinkles_marginTop_1_mobile__onxwjuyo HintText_hintText__down5s0 InputState_natural_default_colour__a2a1mv4"
    >
      hint text
    </p>
  </div>
</div>
`;

exports[`<ColourInput /> > should match snapshot 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_position_relative_mobile__onxwju9w sprinkles_width_full_mobile__onxwjugg NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew"
      >
        <div
          class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju88 sprinkles_flexWrap_nowrap_mobile__onxwjuok sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_center_mobile__onxwjulg sprinkles_position_relative_mobile__onxwju9w"
        >
          <div
            class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_display_flex_mobile__onxwju88 sprinkles_height_full_mobile__onxwjuew sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_space-around_mobile__onxwjulo sprinkles_flexShrink_0_mobile__onxwjuoc sprinkles_position_absolute_mobile__onxwjua0 ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
          >
            <div
              class="reset_block__1oah0224 sprinkles_paddingBottom_3_mobile__onxwjuqw sprinkles_paddingLeft_3_mobile__onxwjus0 sprinkles_paddingRight_3_mobile__onxwjut4 sprinkles_paddingTop_3_mobile__onxwjuu8 sprinkles_borderRadius_1_mobile__onxwjuao"
              style="background-color: rgb(108, 17, 17);"
            />
          </div>
          <span
            class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju80 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwjua0"
          >
            #6c1111
          </span>
          <input
            autocomplete="off"
            class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_flexGrow_1_mobile__onxwjuo8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_width_full_mobile__onxwjugg sprinkles_position_relative_mobile__onxwju9w sprinkles_display_flex_mobile__onxwju88 sprinkles_borderRadius_md_mobile__onxwjub4 sprinkles_backgroundColor_transparent__onxwju4o withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
            id="id"
            type="color"
            value="#6c1111"
          />
        </div>
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_flex_mobile__onxwju88 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew sprinkles_textAlign_left_mobile__onxwjuac NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjurw sprinkles_paddingRight_2_mobile__onxwjut0 sprinkles_display_block_mobile__onxwju80 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju2s sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_marginBottom_none_mobile__onxwjuw4 sprinkles_marginLeft_none_mobile__onxwjux8 sprinkles_marginRight_none_mobile__onxwjuyg sprinkles_marginTop_none_mobile__onxwjuzo sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_inline_mobile__onxwju8g NotchedBase_placeholder_default__1ft8sxlz InputState_natural_default_colour__a2a1mv4 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl17"
            for="id"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> > should match snapshot when active 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg input-class"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_position_relative_mobile__onxwju9w sprinkles_width_full_mobile__onxwjugg NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew"
      >
        <div
          class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju88 sprinkles_flexWrap_nowrap_mobile__onxwjuok sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_center_mobile__onxwjulg sprinkles_position_relative_mobile__onxwju9w"
        >
          <div
            class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_display_flex_mobile__onxwju88 sprinkles_height_full_mobile__onxwjuew sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_space-around_mobile__onxwjulo sprinkles_flexShrink_0_mobile__onxwjuoc sprinkles_position_absolute_mobile__onxwjua0 ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
          >
            <div
              class="reset_block__1oah0224 sprinkles_paddingBottom_3_mobile__onxwjuqw sprinkles_paddingLeft_3_mobile__onxwjus0 sprinkles_paddingRight_3_mobile__onxwjut4 sprinkles_paddingTop_3_mobile__onxwjuu8 sprinkles_borderRadius_1_mobile__onxwjuao"
              style="background-color: rgb(236, 64, 64);"
            />
          </div>
          <span
            class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju80 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwjua0"
          >
            #ec4040
          </span>
          <input
            autocomplete="off"
            class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_flexGrow_1_mobile__onxwjuo8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_width_full_mobile__onxwjugg sprinkles_position_relative_mobile__onxwju9w sprinkles_display_flex_mobile__onxwju88 sprinkles_borderRadius_md_mobile__onxwjub4 sprinkles_backgroundColor_transparent__onxwju4o withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
            type="color"
            value="#ec4040"
          />
        </div>
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_flex_mobile__onxwju88 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew sprinkles_textAlign_left_mobile__onxwjuac NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_activeBorderColour__a2a1mv1"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_activeBorderColour__a2a1mv1"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjurw sprinkles_paddingRight_2_mobile__onxwjut0 sprinkles_display_block_mobile__onxwju80 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju2s sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_marginBottom_none_mobile__onxwjuw4 sprinkles_marginLeft_none_mobile__onxwjux8 sprinkles_marginRight_none_mobile__onxwjuyg sprinkles_marginTop_none_mobile__onxwjuzo sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_inline_mobile__onxwju8g NotchedBase_placeholder_default__1ft8sxlz InputState_activeColour__a2a1mv0 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl17"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_activeBorderColour__a2a1mv1"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> > should match snapshot when loading 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg input-class"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_position_relative_mobile__onxwju9w sprinkles_width_full_mobile__onxwjugg NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew"
      >
        <div
          class="reset_block__1oah0224 ProgressSpinner_size_medium_circular__1kpufmic ProgressSpinner_colours_default__1kpufmi4 reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_position_absolute_mobile__onxwjua0 withEnhancedInput_iconRoot__5jmdy8j withEnhancedInput_suffixIcon__5jmdy8l withEnhancedInput_iconSize_medium__5jmdy8n"
        >
          <svg
            class="sprinkles_display_block_mobile__onxwju80 sprinkles_overflow_hidden_mobile__onxwju8w ProgressSpinner_circular__1kpufmi1"
            viewBox="25 25 50 50"
          >
            <circle
              class="ProgressSpinner_path__1kpufmi3 ProgressSpinner_size_medium_path__1kpufmid"
              cx="50"
              cy="50"
              fill="none"
              r="20"
              stroke-miterlimit="10"
            />
          </svg>
        </div>
        <div
          class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju88 sprinkles_flexWrap_nowrap_mobile__onxwjuok sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_center_mobile__onxwjulg sprinkles_position_relative_mobile__onxwju9w"
        >
          <div
            class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_display_flex_mobile__onxwju88 sprinkles_height_full_mobile__onxwjuew sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_space-around_mobile__onxwjulo sprinkles_flexShrink_0_mobile__onxwjuoc sprinkles_position_absolute_mobile__onxwjua0 ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
          >
            <div
              class="reset_block__1oah0224 sprinkles_paddingBottom_3_mobile__onxwjuqw sprinkles_paddingLeft_3_mobile__onxwjus0 sprinkles_paddingRight_3_mobile__onxwjut4 sprinkles_paddingTop_3_mobile__onxwjuu8 sprinkles_borderRadius_1_mobile__onxwjuao"
              style="background-color: rgb(108, 17, 17);"
            />
          </div>
          <span
            class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju80 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwjua0"
          >
            #6c1111
          </span>
          <input
            aria-busy="true"
            autocomplete="off"
            class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_flexGrow_1_mobile__onxwjuo8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_width_full_mobile__onxwjugg sprinkles_position_relative_mobile__onxwju9w sprinkles_display_flex_mobile__onxwju88 sprinkles_borderRadius_md_mobile__onxwjub4 sprinkles_backgroundColor_transparent__onxwju4o withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b undefined withEnhancedInput_inputItselfSize_medium_suffixed_any__5jmdy8e"
            type="color"
            value="#6c1111"
          />
        </div>
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_flex_mobile__onxwju88 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew sprinkles_textAlign_left_mobile__onxwjuac NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjurw sprinkles_paddingRight_2_mobile__onxwjut0 sprinkles_display_block_mobile__onxwju80 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju2s sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_marginBottom_none_mobile__onxwjuw4 sprinkles_marginLeft_none_mobile__onxwjux8 sprinkles_marginRight_none_mobile__onxwjuyg sprinkles_marginTop_none_mobile__onxwjuzo sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_inline_mobile__onxwju8g NotchedBase_placeholder_default__1ft8sxlz InputState_natural_default_colour__a2a1mv4 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl17"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> > should match snapshot when touched 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg input-class"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_position_relative_mobile__onxwju9w sprinkles_width_full_mobile__onxwjugg NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew"
      >
        <div
          class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju88 sprinkles_flexWrap_nowrap_mobile__onxwjuok sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_center_mobile__onxwjulg sprinkles_position_relative_mobile__onxwju9w"
        >
          <div
            class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_display_flex_mobile__onxwju88 sprinkles_height_full_mobile__onxwjuew sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_space-around_mobile__onxwjulo sprinkles_flexShrink_0_mobile__onxwjuoc sprinkles_position_absolute_mobile__onxwjua0 ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
          >
            <div
              class="reset_block__1oah0224 sprinkles_paddingBottom_3_mobile__onxwjuqw sprinkles_paddingLeft_3_mobile__onxwjus0 sprinkles_paddingRight_3_mobile__onxwjut4 sprinkles_paddingTop_3_mobile__onxwjuu8 sprinkles_borderRadius_1_mobile__onxwjuao"
              style="background-color: rgb(108, 17, 17);"
            />
          </div>
          <span
            class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju80 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwjua0"
          >
            #6c1111
          </span>
          <input
            autocomplete="off"
            class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_flexGrow_1_mobile__onxwjuo8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_width_full_mobile__onxwjugg sprinkles_position_relative_mobile__onxwju9w sprinkles_display_flex_mobile__onxwju88 sprinkles_borderRadius_md_mobile__onxwjub4 sprinkles_backgroundColor_transparent__onxwju4o withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
            type="color"
            value="#6c1111"
          />
        </div>
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_flex_mobile__onxwju88 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew sprinkles_textAlign_left_mobile__onxwjuac NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_error_default_borderColour__a2a1mvd"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_error_default_borderColour__a2a1mvd"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjurw sprinkles_paddingRight_2_mobile__onxwjut0 sprinkles_display_block_mobile__onxwju80 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju2s sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_marginBottom_none_mobile__onxwjuw4 sprinkles_marginLeft_none_mobile__onxwjux8 sprinkles_marginRight_none_mobile__onxwjuyg sprinkles_marginTop_none_mobile__onxwjuzo sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_inline_mobile__onxwju8g NotchedBase_placeholder_default__1ft8sxlz InputState_error_default_colour__a2a1mvc NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl17"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_error_default_borderColour__a2a1mvd"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> > should match snapshot when touched and invalid 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg input-class"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_position_relative_mobile__onxwju9w sprinkles_width_full_mobile__onxwjugg NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew"
      >
        <div
          class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju88 sprinkles_flexWrap_nowrap_mobile__onxwjuok sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_center_mobile__onxwjulg sprinkles_position_relative_mobile__onxwju9w"
        >
          <div
            class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_display_flex_mobile__onxwju88 sprinkles_height_full_mobile__onxwjuew sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_space-around_mobile__onxwjulo sprinkles_flexShrink_0_mobile__onxwjuoc sprinkles_position_absolute_mobile__onxwjua0 ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
          >
            <div
              class="reset_block__1oah0224 sprinkles_paddingBottom_3_mobile__onxwjuqw sprinkles_paddingLeft_3_mobile__onxwjus0 sprinkles_paddingRight_3_mobile__onxwjut4 sprinkles_paddingTop_3_mobile__onxwjuu8 sprinkles_borderRadius_1_mobile__onxwjuao"
              style="background-color: rgb(108, 17, 17);"
            />
          </div>
          <span
            class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju80 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwjua0"
          >
            #6c1111
          </span>
          <input
            autocomplete="off"
            class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_flexGrow_1_mobile__onxwjuo8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_width_full_mobile__onxwjugg sprinkles_position_relative_mobile__onxwju9w sprinkles_display_flex_mobile__onxwju88 sprinkles_borderRadius_md_mobile__onxwjub4 sprinkles_backgroundColor_transparent__onxwju4o withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
            type="color"
            value="#6c1111"
          />
        </div>
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_flex_mobile__onxwju88 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew sprinkles_textAlign_left_mobile__onxwjuac NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_error_default_borderColour__a2a1mvd"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_error_default_borderColour__a2a1mvd"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjurw sprinkles_paddingRight_2_mobile__onxwjut0 sprinkles_display_block_mobile__onxwju80 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju2s sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_marginBottom_none_mobile__onxwjuw4 sprinkles_marginLeft_none_mobile__onxwjux8 sprinkles_marginRight_none_mobile__onxwjuyg sprinkles_marginTop_none_mobile__onxwjuzo sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_inline_mobile__onxwju8g NotchedBase_placeholder_default__1ft8sxlz InputState_error_default_colour__a2a1mvc NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl17"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_error_default_borderColour__a2a1mvd"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> > should match snapshot when touched and valid 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg input-class"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_position_relative_mobile__onxwju9w sprinkles_width_full_mobile__onxwjugg NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew"
      >
        <div
          class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju88 sprinkles_flexWrap_nowrap_mobile__onxwjuok sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_center_mobile__onxwjulg sprinkles_position_relative_mobile__onxwju9w"
        >
          <div
            class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_display_flex_mobile__onxwju88 sprinkles_height_full_mobile__onxwjuew sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_space-around_mobile__onxwjulo sprinkles_flexShrink_0_mobile__onxwjuoc sprinkles_position_absolute_mobile__onxwjua0 ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
          >
            <div
              class="reset_block__1oah0224 sprinkles_paddingBottom_3_mobile__onxwjuqw sprinkles_paddingLeft_3_mobile__onxwjus0 sprinkles_paddingRight_3_mobile__onxwjut4 sprinkles_paddingTop_3_mobile__onxwjuu8 sprinkles_borderRadius_1_mobile__onxwjuao"
              style="background-color: rgb(108, 17, 17);"
            />
          </div>
          <span
            class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju80 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwjua0"
          >
            #6c1111
          </span>
          <input
            autocomplete="off"
            class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_flexGrow_1_mobile__onxwjuo8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_width_full_mobile__onxwjugg sprinkles_position_relative_mobile__onxwju9w sprinkles_display_flex_mobile__onxwju88 sprinkles_borderRadius_md_mobile__onxwjub4 sprinkles_backgroundColor_transparent__onxwju4o withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b"
            type="color"
            value="#6c1111"
          />
        </div>
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_flex_mobile__onxwju88 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew sprinkles_textAlign_left_mobile__onxwjuac NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_success_default_borderColour__a2a1mv7"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_success_default_borderColour__a2a1mv7"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjurw sprinkles_paddingRight_2_mobile__onxwjut0 sprinkles_display_block_mobile__onxwju80 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju2s sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_marginBottom_none_mobile__onxwjuw4 sprinkles_marginLeft_none_mobile__onxwjux8 sprinkles_marginRight_none_mobile__onxwjuyg sprinkles_marginTop_none_mobile__onxwjuzo sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_inline_mobile__onxwju8g NotchedBase_placeholder_default__1ft8sxlz InputState_success_default_colour__a2a1mv6 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl17"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_success_default_borderColour__a2a1mv7"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> > should match snapshot with both icons 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg input-class"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_position_relative_mobile__onxwju9w sprinkles_width_full_mobile__onxwjugg NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew"
      >
        <span
          class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju80 Icon_makeResponsiveStyle_key_bp__1gy3ire4 reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_position_absolute_mobile__onxwjua0 withEnhancedInput_iconRoot__5jmdy8j withEnhancedInput_suffixIcon__5jmdy8l withEnhancedInput_iconSize_medium__5jmdy8n InputState_natural_default_colour__a2a1mv4"
        >
          <svg
            aria-hidden="true"
            class="sprinkles_display_block_mobile__onxwju80 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </span>
        <div
          class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju88 sprinkles_flexWrap_nowrap_mobile__onxwjuok sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_center_mobile__onxwjulg sprinkles_position_relative_mobile__onxwju9w"
        >
          <div
            class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_display_flex_mobile__onxwju88 sprinkles_height_full_mobile__onxwjuew sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_space-around_mobile__onxwjulo sprinkles_flexShrink_0_mobile__onxwjuoc sprinkles_position_absolute_mobile__onxwjua0 ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
          >
            <div
              class="reset_block__1oah0224 sprinkles_paddingBottom_3_mobile__onxwjuqw sprinkles_paddingLeft_3_mobile__onxwjus0 sprinkles_paddingRight_3_mobile__onxwjut4 sprinkles_paddingTop_3_mobile__onxwjuu8 sprinkles_borderRadius_1_mobile__onxwjuao"
              style="background-color: rgb(108, 17, 17);"
            />
          </div>
          <span
            class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju80 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwjua0"
          >
            #6c1111
          </span>
          <input
            autocomplete="off"
            class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_flexGrow_1_mobile__onxwjuo8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_width_full_mobile__onxwjugg sprinkles_position_relative_mobile__onxwju9w sprinkles_display_flex_mobile__onxwju88 sprinkles_borderRadius_md_mobile__onxwjub4 sprinkles_backgroundColor_transparent__onxwju4o withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b undefined withEnhancedInput_inputItselfSize_medium_suffixed_any__5jmdy8e"
            type="color"
            value="#6c1111"
          />
        </div>
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_flex_mobile__onxwju88 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew sprinkles_textAlign_left_mobile__onxwjuac NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjurw sprinkles_paddingRight_2_mobile__onxwjut0 sprinkles_display_block_mobile__onxwju80 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju2s sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_marginBottom_none_mobile__onxwjuw4 sprinkles_marginLeft_none_mobile__onxwjux8 sprinkles_marginRight_none_mobile__onxwjuyg sprinkles_marginTop_none_mobile__onxwjuzo sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_inline_mobile__onxwju8g NotchedBase_placeholder_default__1ft8sxlz InputState_natural_default_colour__a2a1mv4 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl17"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<ColourInput /> > should match snapshot with suffix icon 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component-provider=""
>
  <div
    class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg input-class"
  >
    <div
      class="reset_block__1oah0224 sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_position_relative_mobile__onxwju9w sprinkles_width_full_mobile__onxwjugg NotchedBase_root__1ft8sxl0"
    >
      <div
        class="reset_block__1oah0224 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew"
      >
        <span
          class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju80 Icon_makeResponsiveStyle_key_bp__1gy3ire4 reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_position_absolute_mobile__onxwjua0 withEnhancedInput_iconRoot__5jmdy8j withEnhancedInput_suffixIcon__5jmdy8l withEnhancedInput_iconSize_medium__5jmdy8n InputState_natural_default_colour__a2a1mv4"
        >
          <svg
            aria-hidden="true"
            class="sprinkles_display_block_mobile__onxwju80 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
            />
          </svg>
        </span>
        <div
          class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju88 sprinkles_flexWrap_nowrap_mobile__onxwjuok sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_center_mobile__onxwjulg sprinkles_position_relative_mobile__onxwju9w"
        >
          <div
            class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_display_flex_mobile__onxwju88 sprinkles_height_full_mobile__onxwjuew sprinkles_alignItems_center_mobile__onxwjukw sprinkles_justifyContent_space-around_mobile__onxwjulo sprinkles_flexShrink_0_mobile__onxwjuoc sprinkles_position_absolute_mobile__onxwjua0 ColourInput_colouredBoxHolder__fijwir1 ColourInput_colouredBoxHolderSize_medium__fijwir3"
          >
            <div
              class="reset_block__1oah0224 sprinkles_paddingBottom_3_mobile__onxwjuqw sprinkles_paddingLeft_3_mobile__onxwjus0 sprinkles_paddingRight_3_mobile__onxwjut4 sprinkles_paddingTop_3_mobile__onxwjuu8 sprinkles_borderRadius_1_mobile__onxwjuao"
              style="background-color: rgb(108, 17, 17);"
            />
          </div>
          <span
            class="reset_inlineText__1oah0223 sprinkles_display_block_mobile__onxwju80 useTextStyles_root__1xnpmd70 reset_inlineText__1oah0223 useTextStyles_colours_neutral__1xnpmd7i useTextStyles_fontWeight_normal__1xnpmd7p useTextStyles_sizes_4__1xnpmd74 ColourInput_valueText__fijwir4 ColourInput_valueTextSize_medium__fijwir6 reset_block__1oah0224 sprinkles_position_absolute_mobile__onxwjua0"
          >
            #6c1111
          </span>
          <input
            autocomplete="off"
            class="reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_flexGrow_1_mobile__onxwjuo8 ColourInput_input__fijwir0 reset_trimmedBlockElement__1oah0226 reset_appearance__1oah0221 reset_input__1oah0229 sprinkles_width_full_mobile__onxwjugg sprinkles_position_relative_mobile__onxwju9w sprinkles_display_flex_mobile__onxwju88 sprinkles_borderRadius_md_mobile__onxwjub4 sprinkles_backgroundColor_transparent__onxwju4o withEnhancedInput_input_itself_root__5jmdy80 withEnhancedInput_inputItselfSize_medium_root_any__5jmdy8b undefined withEnhancedInput_inputItselfSize_medium_suffixed_any__5jmdy8e"
            type="color"
            value="#6c1111"
          />
        </div>
      </div>
      <div
        class="reset_block__1oah0224 sprinkles_pointerEvents_none__onxwju2s sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_flex_mobile__onxwju88 sprinkles_width_full_mobile__onxwjugg sprinkles_height_full_mobile__onxwjuew sprinkles_textAlign_left_mobile__onxwjuac NotchedBase_borderVisualDefaults__1ft8sxl6 NotchedBase_borders_root_default__1ft8sxlb"
      >
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_leading__1ft8sxlc InputState_natural_default_borderColour__a2a1mv5"
        />
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_middle__1ft8sxld InputState_natural_default_borderColour__a2a1mv5"
        >
          <div
            class="reset_block__1oah0224 sprinkles_paddingLeft_2_mobile__onxwjurw sprinkles_paddingRight_2_mobile__onxwjut0 sprinkles_display_block_mobile__onxwju80 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_notchGapPlaceholder_base__1ft8sxl7 NotchedBase_notchGapPlaceholder_medium__1ft8sxl9"
          >
            placeholder something
          </div>
          <label
            class="reset_inlineText__1oah0223 sprinkles_pointerEvents_none__onxwju2s sprinkles_paddingBottom_none_mobile__onxwjuro sprinkles_paddingLeft_none_mobile__onxwjuss sprinkles_paddingRight_none_mobile__onxwjutw sprinkles_paddingTop_none_mobile__onxwjuv0 sprinkles_marginBottom_none_mobile__onxwjuw4 sprinkles_marginLeft_none_mobile__onxwjux8 sprinkles_marginRight_none_mobile__onxwjuyg sprinkles_marginTop_none_mobile__onxwjuzo sprinkles_position_absolute_mobile__onxwjua0 sprinkles_display_inline_mobile__onxwju8g NotchedBase_placeholder_default__1ft8sxlz InputState_natural_default_colour__a2a1mv4 NotchedBase_labelStyle_base__1ft8sxl1 NotchedBase_labelStyle_medium__1ft8sxl3 NotchedBase_placeholderPlacement_medium_shifted__1ft8sxl17"
          >
            placeholder something
          </label>
        </div>
        <div
          class="NotchedBase_borderRegionDefaults__1ft8sxl5 NotchedBase_borders_trailing__1ft8sxle InputState_natural_default_borderColour__a2a1mv5"
        />
      </div>
    </div>
  </div>
</div>
`;
